--- a/home.html
+++ b/home.html
@@ -141,7 +141,7 @@
             <div class="row">
                 <div class="col-xl-7 col-lg-7">
                     <div class="about-title-section mb-30">
-                        <h1> Redeemer's International Secondary schoo</h1>
+                        <h1> Redeemer's International Secondary school</h1>
                            <p style="color: #000000;">
                             Redeemer's International Secondary school (RISE) is an educational center for academic excellence that is based in Emene, Enugu state, Nigeria. We have our students across two major class divisions – Junior and Senior Secondary.
 
@@ -158,11 +158,7 @@
                        <a href="about_us.html"> <button class="theme-btn blue-bg-border mt-20"><span class="btn-text">Learn More</span></button></a>
                     </div>
                 </div>
-                <div class="col-xl-5 col-lg-5">
-                    <div class="about-right-img mb-30">
-                        <img src="img/Toyibat (3).jpeg" alt="" style="height: 500px;">
-                    </div>
-                </div>
+                
             </div>
             
         </div>
